<resources>
    <string name="app_name">VAT NFC Programmer</string>

    <string name="button_start_write">Write Tag</string>
    <string name="button_cancel_write">Cancel</string>
    <string name="import_configuration">Import Configuration</string>
    <string name="key_missing">Unset</string>
    <string name="text_user">User</string>
    <string name="text_member">Member</string>
    <string name="title_write_tag">Write Tag</string>
    <string name="title_read_tag">Read Tag</string>
    <string name="title_clearing_data">Clearing data</string>
    <string name="message_clearing_data">This will clear all recorded cards.</string>
    <string name="button_start_erase">Erase Tag</string>
    <string name="message_keys_not_configured">Keys not configured</string>

    <string name="message_tag_written">Tag written</string>
    <string name="message_tag_ereased">Tag erased</string>
    <string name="message_missing_configuration">Missing configuration. Unable to provision new tags.</string>
    <string name="tab_home">Write</string>
    <string name="tab_read">Read</string>
    <string name="tab_data">Data</string>
    <string name="tab_config">Config</string>
    <string name="message_import_cancelled">Import cancelled</string>
    <string name="message_configuration_imported">Configuration imported</string>
    <string name="title_additional_information">Additional Information</string>
    <string name="hint_holder_name">Card holder name</string>
    <string name="hint_holder_identification">Identification</string>
    <string name="error_no_keys_present_for_writing">No keys present for writing</string>
    <string name="error_missing_configuration">Missing configuration</string>
    <string name="message_tag_discovered">Tag discovered.</string>
    <string name="message_no_id_data_detected">No ID data detected</string>
    <string name="message_tag_can_be_used_for_access_control">Tag can be used for access control.</string>
    <string name="message_failed_to_erase">Failed to erase: %s</string>
    <string name="message_operation_cancelled">Operation cancelled</string>
    <string name="validation_error_must_not_be_empty">Must not be empty</string>
    <string name="title_export_of_cards">Export of cards</string>
    <string name="description_share_data">Share data</string>
    <string name="message_unable_to_open_selected_file">Unable to open selected file</string>
    <string name="text_key_a">Key A</string>
    <string name="text_key_b">Key B</string>
    <string name="hint_configuration_password">Configuration password</string>
    <string name="error_import_failed">Import failed: %s</string>
    <string name="error_unable_to_decode_configuration">Unable to decode configuration: %s</string>
    <string name="key_present">Present</string>
    <string name="message_failed_to_read_tag">Failed to read tag: %s</string>
    <string name="message_either_wrong_encryption_keys_or_card_is_not_provisioned">Either wrong encryption keys, or tag is not provisioned.</string>
    <string name="action_import">Import</string>
    <string name="header_card_information">Tag Information</string>
    <string name="error_failed_to_write">Failed to write: %s</string>
    <string name="error_already_provisioned">Tag is already provisioned for member: %s. The card must be erased before it can be written again.</string>
    <string name="marker_erased"><![CDATA[<<erased>>]]></string>
    <string name="error_card_number_must_not_be_empty">Card number must not be empty</string>
    <string name="error_card_number_must_be_a_number_was">Card number must be a number, is: \'%s\'</string>
    <string name="error_drivers_license_must_not_be_empty">Driver\'s license must not be empty</string>
    <string name="validation_error_member_id_must_be_a_number">Member ID must be a number</string>

    <string-array name="id_types">
        <item>None</item>
        <item>Card Number</item>
        <item>Drivers license</item>
        <item>Other</item>
    </string-array>

</resources>