<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainTab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/text_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/text_margin"
                android:text="@string/title_write_tag"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:id="@+id/warning_missing_configuration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/text_margin">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/message_missing_configuration"
                    android:paddingEnd="@dimen/text_margin"
                    android:src="@drawable/baseline_warning_amber_24"
                    tools:ignore="RtlSymmetry" />

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_missing_configuration" />
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutMemberIdInput">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/memberIdInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_member"
                    android:inputType="number"
                    android:maxLength="6"
                    android:minHeight="@dimen/min_edit_height"
                    android:singleLine="true"
                    android:text=""
                    tools:text="123456" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/title_additional_information"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/holderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_holder_name"
                    android:inputType="textPersonName"
                    android:minHeight="@dimen/min_edit_height"
                    android:singleLine="true"
                    android:text=""
                    android:importantForAutofill="no" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/holderIdTypeWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/holderId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_holder_identification"
                    android:inputType="text"
                    android:minHeight="@dimen/min_edit_height"
                    android:singleLine="true"
                    android:importantForAutofill="no"
                    android:text="" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <AutoCompleteTextView
                    android:id="@+id/holderIdType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    app:simpleItems="@array/id_types"
                    android:minHeight="@dimen/min_edit_height" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/text_margin">

                <Button
                    android:id="@+id/startWriteButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_margin"
                    android:layout_weight="1"
                    android:text="@string/button_start_write" />

                <Button
                    android:id="@+id/startEraseButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_start_erase" />

                <Button
                    android:id="@+id/cancel_operation_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/button_cancel_write"
                    android:visibility="gone"
                    android:layout_marginEnd="@dimen/text_margin"
                    tools:visibility="visible" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:indeterminate="true"
                    android:id="@+id/writeProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </LinearLayout>


            <TextView
                android:id="@+id/writeOutcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:text="" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/text_margin"
                android:background="?android:attr/listDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/title_read_tag"
                android:textAppearance="@style/TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/tagOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>