<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainTab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Write Tag"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_member"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget" />

                <EditText
                    android:id="@+id/memberIdInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Mitglied"
                    android:inputType="number"
                    android:singleLine="true"
                    android:maxLength="6"
                    android:text="000000" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_user"
                    android:textAppearance="@android:style/TextAppearance.Material.Widget" />

                <EditText
                    android:id="@+id/cardNumberInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Benutzer"
                    android:inputType="number"
                    android:singleLine="true"
                    android:maxLength="4"
                    android:text="0001" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startWriteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_start_write" />

            <ProgressBar
                android:id="@+id/writeProgress"
                style="?android:attr/progressBarStyle"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/writeOutcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:fontFamily="monospace" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Read Tag"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tagOutput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="monospace" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>